--- a/app/globals.css
+++ b/app/globals.css
@@ -139,7 +139,7 @@ body {
   }
 
   span {
-    @apply text-[color:var(--primary)] text-5xl md:text-6xl lg:text-7xl;
+    @apply text-[color:var(--secondary)] text-5xl md:text-6xl lg:text-7xl;
     font-family: "Inter", sans-serif;
   }
 }
