--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
   --background-rgb: 255, 255, 255;
   --title: #0f0f0f;
   --background: #d4e4d4;
-  --primary: #44ff00;
+  --primary: #ff6600;
   --secondary: #ff1200;
   --text: #5b645b;
 }
