refactor styles: update background color in globals.css and improve code formatting in page.tsx

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-rgb: 255, 255, 255;
   --title: #0f0f0f;
-  --background: #d4e4d4;
+  --background: #e7e5e4;
   --primary: #d80e00;
   --secondary: #ff1200;
   --text: #5b645b;
