--- a/app/globals.css
+++ b/app/globals.css
@@ -18,7 +18,7 @@ body {
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-general-sans);
 }
 
 @layer utilities {
@@ -110,8 +110,7 @@ body {
   }
   body {
     @apply bg-background text-foreground;
-    @apply bg-[length:var(--background)] text-[length:var(--text)];
-    font-family: "Inter", sans-serif;
+    font-family: var(--font-general-sans);
   }
 
   h1,
@@ -120,26 +119,22 @@ body {
   h4,
   h5,
   h6 {
-    @apply tracking-tight;
+    @apply tracking-tight font-general-sans;
   }
 
   h1 {
     @apply text-[color:var(--title)] font-extrabold text-5xl md:text-6xl lg:text-7xl;
-    font-family: "Inter", sans-serif;
   }
 
   h2 {
     @apply text-[color:var(--title)] font-semibold text-2xl;
-    font-family: "Inter", sans-serif;
   }
 
   p {
     @apply text-[color:var(--text)] text-base;
-    font-family: "Inter", sans-serif;
   }
 
   span {
     @apply text-[color:var(--secondary)] font-extrabold text-5xl md:text-6xl lg:text-7xl;
-    font-family: "Inter", sans-serif;
   }
 }
