change background color

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-rgb: 255, 255, 255;
   --title: #0f0f0f;
-  --background: #e6e6e6;
+  --background: #faf9f5;
   --primary: #d80e00;
   --secondary: #ff1200;
   --text: #5b645b;
