Hero section final adjustments

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,8 @@
   --title: #0f0f0f;
   --background: #faf9f5;
   --primary: #d80e00;
-  --secondary: #ff1200;
+  --secondary: #229EFF;
+  /* --secondary: #ff1200; */
   --text: #5b645b;
 }
 
