--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
   --title: #0f0f0f;
   --background: #faf9f5;
   --primary: #d80e00;
-  --secondary: #229EFF;
+  --secondary: #229eff;
   /* --secondary: #ff1200; */
   --text: #5b645b;
 }
@@ -124,22 +124,22 @@ body {
   }
 
   h1 {
-    @apply text-[color:var(--title)] font-bold text-4xl md:text-5xl lg:text-5xl tracking-tight;
+    @apply text-4xl font-bold tracking-tight text-[color:var(--title)] md:text-5xl lg:text-5xl;
   }
 
   h2 {
-    @apply text-[color:var(--title)] font-bold text-4xl md:text-5xl lg:text-5xl tracking-tight;
+    @apply text-4xl font-bold tracking-tight text-[color:var(--title)] md:text-5xl lg:text-5xl;
   }
 
   h3 {
-    @apply text-[color:var(--title)] font-semibold text-2xl md:text-3xl lg:text-3xl tracking-tight;
+    @apply text-2xl font-semibold tracking-tight text-[color:var(--title)] md:text-3xl lg:text-3xl;
   }
 
   p {
-    @apply text-[color:var(--text)] text-base font-dm-mono uppercase;
+    @apply font-dm-mono text-base uppercase text-[color:var(--text)];
   }
 
   span {
-    @apply text-[color:var(--secondary)] font-bold text-4xl md:text-5xl lg:text-5xl tracking-tight;
+    @apply text-4xl font-bold tracking-tight text-[color:var(--secondary)] md:text-5xl lg:text-5xl;
   }
 }
