blur text implementation

--- a/app/globals.css
+++ b/app/globals.css
@@ -98,7 +98,7 @@ body {
     --sidebar-accent-foreground: 240 4.8% 95.9%;
     --sidebar-border: 240 3.7% 15.9%;
     --sidebar-ring: 217.2 91.2% 59.8%;
-    --title: #ffffff;
+    --titles: #ffffff;
     --background: #0a0a0a;
     --primary: #33cc00;
     --secondary: #cc0f00;
