--- a/app/globals.css
+++ b/app/globals.css
@@ -128,7 +128,7 @@ body {
   }
 
   h1 {
-    @apply text-3xl font-bold tracking-tight text-[color:var(--title)] sm:text-3xl md:text-4xl lg:text-5xl;
+    @apply text-3xl font-bold tracking-tight sm:text-3xl md:text-4xl lg:text-5xl;
   }
 
   h2 {
