--- a/app/globals.css
+++ b/app/globals.css
@@ -156,35 +156,37 @@ body {
 /* Fade Up Animation */
 @keyframes fadeUp {
   from {
-    opacity: 0.5;
-    transform: translateY(10px) scale(0.8);
+    filter: saturate(0) contrast(4) brightness(0.1) blur(5px);
+    opacity: 0;
+    scale: 0.95;
+    translate: 0 4rem;
   }
   to {
+    filter: none;
     opacity: 1;
-    transform: translateY(0) scale(1);
+    scale: 1;
+    translate: 0 0;
   }
 }
 
 .fadeUp {
   animation: fadeUp both;
-  animation-timeline: view();
+  animation-timeline: view(50% 20%);
   transition: all 3s cubic-bezier(0.42, 0, 0.58, 1);
 }
 
 .fadeUp-1 {
   animation: fadeUp both;
-  animation-timeline: view();
-  animation-range: entry 20% cover 40%;
+  animation-timeline: view(50% 20%);
 }
 
 .fadeUp-2 {
   animation: fadeUp both;
-  animation-timeline: view();
-  animation-range: entry 40% cover 60%;
+  animation-timeline: view(65% 35%);
 }
 
 .fadeUp-3 {
   animation: fadeUp both;
-  animation-timeline: view();
-  animation-range: entry 60% cover 80%;
+  animation-timeline: view(70% 20%);
+  animation-range: entry 60% cover 100%;
 }
